--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
 
 <title>学五十音</title>
 <meta charset="utf-8" />
-
+<style>
+button {
+	margin-right: 3px;
+}
+</style>
 </head>
 
 <body>
 
+<form>
+	<input type="checkbox" id="checkbox-hiragana" checked="true"/>
+	<label for="checkbox-hiragana">平假名</label>
+	<input type="checkbox" id="checkbox-katakana"/>
+	<label for="checkbox-katakana">片假名</label>
+	<input type="checkbox" id="checkbox-kana-roma" checked="true"/>
+	<label for="checkbox-kana-roma">看假名选罗马音</label>
+	<input type="checkbox" id="checkbox-roma-kana"/>
+	<label for="checkbox-roma-kana">看罗马音选假名</label>
+	<input type="checkbox" id="checkbox-youon"/>
+	<label for="checkbox-youon">拗音</label>
+</form>
+
 <p id="question"></p>
-
-<p id="answer"></p>
-
+<p id="choice"></p>
 <p id="message"></p>
-
 <button id="next" onclick="newQuestion()">next</button>
 
 <script>
@@ -32,7 +46,8 @@ var dict = [
 	['wa','わ','ワ'], ['wo','を','ヲ'], ['n','ん','ン'],
 	['ga','が','ガ'], ['gi','ぎ','ギ'], ['gu','ぐ','グ'], ['ge','げ','ゲ'], ['go','ご','ゴ'],
 	['za','ざ','ザ'], ['ji','じ','ジ'], ['zu','ず','ズ'], ['ze','ぜ','ゼ'], ['zo','ぞ','ゾ'],
-	['da','だ','ダ'], //['di','ぢ','ヂ'], //['du','づ','ヅ'], ['de','で','デ'], ['do','ど','ド'],
+	['da','だ','ダ'], //['di','ぢ','ヂ'], //['du','づ','ヅ'],
+	['de','で','デ'], ['do','ど','ド'],
 	['ba','ば','バ'], ['bi','び','ビ'], ['bu','ぶ','ブ'], ['be','べ','ベ'], ['bo','ぼ','ボ'],
 	['pa','ぱ','パ'], ['pi','ぴ','ピ'], ['pu','ぷ','プ'], ['pe','ぺ','ペ'], ['po','ぽ','ポ'],
 	['kya','きゃ','キャ'], ['kyu','きゅ','キュ'], ['kyo','きょ','キョ'],
@@ -64,11 +79,12 @@ function $(str, innerHTML) {
 }
 
 var elemQuestion = $('#question');
-var elemAnswer = $('#answer');
+var elemChoice = $('#choice');
 var elemMessage = $('#message');
 var buttonNext = $('#next');
-var len = dict.length;
-var answer;
+var checkHiragana = $('#checkbox-hiragana'), checkKatakana = $('#checkbox-katakana'), checkKanaRoma = $('#checkbox-kana-roma'), checkRomaKana = $('#checkbox-roma-kana'), checkYouon = $('#checkbox-youon');
+
+var answer, answerStr;
 var correctCnt = parseInt(localStorage['io.github.zmx0142857.abc.correctCnt']) || 0;
 var errorCnt = parseInt(localStorage['io.github.zmx0142857.abc.errorCnt']) || 0;
 
@@ -77,24 +93,54 @@ function statistics() {
 	return 'correct: ' + correctCnt + ', error: ' + errorCnt;
 }
 
-function choose() {
-	if (this.name == answer) {
-		++correctCnt;
-		localStorage['io.github.zmx0142857.abc.correctCnt'] = correctCnt;
-		elemMessage.innerHTML = 'correct!';
-	} else {
-		++errorCnt;
-		localStorage['io.github.zmx0142857.abc.errorCnt'] = errorCnt;
-		elemMessage.innerHTML = 'error!';
-	}
-	buttonNext.style.display = 'revert';
+function choose(n) {
+	return function() {
+		if (n == answer) {
+			++correctCnt;
+			localStorage['io.github.zmx0142857.abc.correctCnt'] = correctCnt;
+			elemMessage.style.color = '#080';
+			elemMessage.innerHTML = 'correct!';
+		} else {
+			++errorCnt;
+			localStorage['io.github.zmx0142857.abc.errorCnt'] = errorCnt;
+			elemMessage.style.color = '#800';
+			elemMessage.innerHTML = 'correct answer: ' + answerStr;
+		}
+		buttonNext.style.display = 'revert';
+		document.onkeydown = onAnswer;
+	};
 }
 
 function newQuestion() {
 	elemMessage.innerHTML = '';
-	elemAnswer.innerHTML = '';
+	elemChoice.innerHTML = '';
 	buttonNext.style.display = 'none';
-	answer = Math.floor(4*Math.random());
+
+	// 产生答案
+	answer = Math.floor(4*Math.random()); // 0, 1, 2, 3
+
+	// 处理参数设置
+	var len = checkYouon.checked ? dict.length: 69;
+	if (!checkHiragana.checked && !checkKatakana.checked)
+		checkHiragana.checked = true;
+	var a = checkHiragana.checked ? 1 : 2;
+	var b = checkKatakana.checked ? 3 : 2;
+	var kana = a+Math.floor((b-a)*Math.random());
+
+	if (!checkKanaRoma.checked && !checkRomaKana.checked)
+		checkKanaRoma.checked = true;
+	var chooseRoma;
+	if (checkKanaRoma.checked && !checkRomaKana.checked)
+		chooseRoma = true;
+	else if (!checkKanaRoma.checked && checkRomaKana.checked)
+		chooseRoma = false;
+	else
+		chooseRoma = Math.random() > 0.5 ? true : false;
+
+	var question = chooseRoma ? kana : 0;
+	var choice = chooseRoma ? 0 : kana;
+
+	// 产生选项
 	var visited = [];
 	var frag = document.createDocumentFragment();
 	for (var n = 0; n < 4; ++n) {
@@ -103,16 +149,32 @@ function newQuestion() {
 			i = Math.floor(len*Math.random());
 		while (visited.includes[i]);
 		visited.push(i);
-		var button = $('button', dict[i][0]);
-		button.name = n;
-		button.onclick = choose;
+
+		var button = $('button', dict[i][choice]);
+		button.onclick = choose(n);
 		frag.appendChild(button);
-		if (n == answer)
-			elemQuestion.innerHTML = dict[i][1];
+		if (n == answer) {
+			elemQuestion.innerHTML = dict[i][question];
+			answerStr = dict[i][choice];
+		}
 	}
-	elemAnswer.appendChild(frag);
+	elemChoice.appendChild(frag);
+	document.onkeydown = onQuestion;
 }
 newQuestion();
+
+function onQuestion(e) {
+	var c = e.keyCode - 48;
+	if (1 <= c && c <= 4) {
+		choose(c-1)();
+	}
+}
+
+function onAnswer(e) {
+	if (e.code == 'Enter') {
+		newQuestion();
+	}
+}
 
 </script>
 </body>
